# arxiv-github-monitor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pages-dashboard.yml
config/: categories.json  settings.json
docs/: nvp-engineering-spec.md
scripts/: discover_papers.sh  generate_report.sh  run_daily_pipeline.sh
site/: index.html
src/arxiv_github_monitor/: __init__.py  arxiv_client.py  cli.py  config.py  github_client.py  models.py  pipeline.py  repo_extractor.py  scoring.py  storage.py  utils.py
tests/: test_pipeline.py  test_repo_extractor.py  test_utils.py
tests/fixtures/: sample_abs.html  sample_api.xml  sample_rss.xml
